[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/sprites/drippy-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Azrael.gd" type="Script" id=2]
[ext_resource path="res://AngelAI.gd" type="Script" id=3]
[ext_resource path="res://BossHealth.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "New Anim"
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 185.559

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 61, 61.5 )

[sub_resource type="CircleShape2D" id=3]
radius = 27.0185

[sub_resource type="CircleShape2D" id=6]
radius = 43.0116

[node name="Azrael" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
hframes = 23

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
"anims/New Anim" = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="AngelAI" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="DetectionZone" type="Area2D" parent="AngelAI"]

[node name="AttackRange" type="CollisionShape2D" parent="AngelAI/DetectionZone"]
shape = SubResource( 5 )

[node name="Area2DTendrils" type="Area2D" parent="."]

[node name="TendrilsArea" type="CollisionShape2D" parent="Area2DTendrils"]
position = Vector2( 1, 2.5 )
shape = SubResource( 4 )

[node name="Health" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Core" type="Area2D" parent="."]

[node name="Heart" type="CollisionShape2D" parent="Core"]
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="AttackCooldown2" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.15

[connection signal="body_entered" from="AngelAI/DetectionZone" to="AngelAI" method="_on_DetectionZone_body_entered"]
[connection signal="body_exited" from="AngelAI/DetectionZone" to="AngelAI" method="_on_DetectionZone_body_exited"]
[connection signal="body_entered" from="Area2DTendrils" to="." method="_on_Area2DTendrils_body_entered"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
